<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/history_detail_activity" android:background="@android:color/black" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/report_widget_size_title_value" android:textColor="@color/widget_step_title_color" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="26.0dip" android:text="@string/currentstep_detail_activities_title" android:layout_centerHorizontal="true" />
    <RelativeLayout android:id="@id/activities_detail" android:paddingLeft="40.0dip" android:paddingRight="40.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="16.0dip" android:layout_below="@id/title">
        <LinearLayout android:orientation="vertical" android:id="@id/left" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/widget_activities_classify_content" android:textColor="@color/widget_step_title_color" android:id="@id/activity" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/currentstep_detail_activity" android:drawableLeft="@drawable/shape_rect_gray" android:drawablePadding="10.0dip" />
            <TextView android:textSize="@dimen/widget_activities_classify_content" android:textColor="@color/widget_step_title_color" android:id="@id/walking" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="14.0dip" android:text="@string/currentstep_detail_walking" android:drawableLeft="@drawable/shape_rect_green" android:drawablePadding="10.0dip" />
            <TextView android:textSize="@dimen/widget_activities_classify_content" android:textColor="@color/widget_step_title_color" android:id="@id/swim" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="14.0dip" android:text="@string/currentstep_detail_swimming" android:drawableLeft="@drawable/shape_rect_darkblue" android:drawablePadding="10.0dip" />
            <TextView android:textSize="@dimen/widget_activities_classify_content" android:textColor="@color/widget_step_title_color" android:id="@id/climb" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="14.0dip" android:text="@string/currentstep_detail_mountain" android:drawableLeft="@drawable/shape_rect_pink" android:drawablePadding="10.0dip" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true">
            <TextView android:textSize="@dimen/widget_activities_classify_content" android:textColor="@color/widget_step_title_color" android:id="@id/running" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/currentstep_detail_running" android:drawableLeft="@drawable/shape_rect_red" android:drawablePadding="10.0dip" android:layout_alignParentRight="true" />
            <TextView android:textSize="@dimen/widget_activities_classify_content" android:textColor="@color/widget_step_title_color" android:id="@id/ridding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="14.0dip" android:text="@string/currentstep_detail_riding" android:drawableLeft="@drawable/shape_rect_blue" android:drawablePadding="10.0dip" android:layout_alignParentRight="true" />
            <TextView android:textSize="@dimen/widget_activities_classify_content" android:textColor="@color/widget_step_title_color" android:id="@id/triathlon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="14.0dip" android:text="@string/currentstep_detail_triathlon_short" android:drawableLeft="@drawable/shape_rect_trialon_purple" android:drawablePadding="10.0dip" android:layout_alignParentRight="true" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>