<?xml version="1.0" encoding="utf-8"?>
<com.huami.watch.reports.widget.ActivitiesDistributionView android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/detail_activity_classify_parent" android:background="@drawable/shape_bg_two" android:paddingTop="@dimen/report_widget_size_parent_paddingtop" android:paddingBottom="5.299988dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/report_widget_size_title_value" android:textColor="@color/widget_step_title_color" android:id="@id/data_detail_date_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/currentstep_detail_title" />
    <TextView android:textSize="@dimen/report_widget_size_unit_font" android:textColor="@color/widget_step_title_color" android:id="@id/data_detail_date_activivties" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" />
    <TextView android:textSize="@dimen/widget_activities_classify_title" android:textColor="@android:color/white" android:gravity="center_vertical" android:layout_gravity="center_horizontal" android:id="@id/detail_activities_classify" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/currentstep_detail_activities" android:drawableRight="@drawable/ask_for_detail" android:drawablePadding="4.0dip" />
    <com.huami.watch.common.widget.HmClassifyBarChart android:layout_gravity="center_horizontal" android:id="@id/detail_activities_classifyChart" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="@dimen/report_widget_size_classifychart_width" android:layout_height="@dimen/report_widget_size_classifychart_height" android:layout_marginTop="3.0dip" />
    <TextView android:textSize="@dimen/report_widget_size_unit_font" android:textColor="@color/widget_step_title_color" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/currentstep_detail_activity_chart_unit" />
</com.huami.watch.reports.widget.ActivitiesDistributionView>